--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -6,19 +6,12 @@
   <meta name="description" content="{{ description }}">
 </head>
 <body>
-  <header>
-    <p>
-      <a href="/">Home</a>
-    </p>
-  </header>
-  <h1>{{ title }}</h1>
-  <p>{{ description }}</p>
-
-  {{{ contents }}}
-
-  <footer>
-    <p>Generated with {{ generator }} &mdash; <a href="{{ url }}">{{ url }}</a></p>
-  </footer>
-
+{{#each collections.posts}}
+<div class="wrap">
+  <div class="crop">
+    <img src="{{image.src}}" alt="{{image.alt}}">
+  </div>
+</div>
+{{/each}}
 </body>
 </html>
