--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -4,16 +4,61 @@ body {
     justify-content: left;
     width: calc(100vw + 300px);
     margin-left: -150px;
-    background: black;
+    background: #F7F7F7;
 }
 .wrap {
     height: 300px;
     width: 165px;
     margin-bottom: 15px;
+    transition: width 1s ease, padding-left 1s ease;
+    position: relative;
+    transition-delay: 0.5s;
 }
-.wrap:nth-child(even) image[clip-path="url(#top)"]{
+.wrap:nth-child(even):hover {
+    padding-left: 335px;
+}
+.wrap:nth-child(odd):hover {
+    width: 500px;
+}
+.wrap:nth-child(even) image[clip-path="url(#bottom)"], .wrap:nth-child(even) .pointer-event.top {
     display: none;
 }
-.wrap:nth-child(odd) image[clip-path="url(#bottom)"]{
+.wrap:nth-child(odd) image[clip-path="url(#top)"], .wrap:nth-child(odd) .pointer-event.bottom {
     display: none;
+}
+.pointer-event {
+    fill: none;
+    pointer-events: all;
+}
+.wrap image {
+    opacity: 0.5;
+    transition: opacity 1s ease;
+    pointer-events: all;
+}
+.wrap:hover image{
+    opacity: 1;
+}
+.wrap image:hover{
+    opacity: 1;
+}
+.description {
+    position: absolute;
+    width: 200px;
+    transform: skew(-25deg);
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    transition-delay: 0.5s;
+    pointer-events: none;
+}
+.wrap:nth-child(even) .description {
+    right: 165px;
+    bottom: 0px;
+}
+.wrap:nth-child(odd) .description {
+    left: 300px;
+    top: 0px;
+}
+.wrap:hover .description {
+    opacity: 1;
+    transition-delay: 1s;
 }
